--- a/Translation/event.json
+++ b/Translation/event.json
@@ -80,9 +80,9 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "jp":"Tốc độ tái tạo Lõi Dung nham nhanh hơn",
+        "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tốc độ tái tạo Lõi Dung nham nhanh hơn",
         "ar":"",
         "it":"",
         "pl":"",
