Update item.json + 2%?

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -542,12 +542,12 @@
     "item.200.name":{
         "en":"Simple Shortbow",
         "fr":"Simple Arc court",
-        "es":"",
+        "es":"Simple Arco corto",
         "ch":"",
         "kr":"",
         "ru":"Простой Короткий Лук",
         "tr":"",
-        "de":"",
+        "de":"Einfacher Kurzbogen",
         "jp":"",
         "pt":"",
         "vi":"Cung Thường",
@@ -560,12 +560,12 @@
     "item.201.name":{
         "en":"Precise Bow",
         "fr":"Arc précis",
-        "es":"",
+        "es":"Arco preciso",
         "ch":"",
         "kr":"",
         "ru":"Точный лук",
         "tr":"",
-        "de":"",
+        "de":"Präziser Bogen",
         "jp":"",
         "pt":"",
         "vi":"Cung Precise",
@@ -578,12 +578,12 @@
     "item.202.name":{
         "en":"Ironarm Longbow",
         "fr":"Arc en fer",
-        "es":"",
+        "es":"Arco de hierro",
         "ch":"",
         "kr":"",
         "ru":"Железный Длинный Лук",
         "tr":"",
-        "de":"",
+        "de":"Eisen Lichtbogen",
         "jp":"",
         "pt":"",
         "vi":"Cung Sắt",
@@ -596,12 +596,12 @@
     "item.203.name":{
         "en":"Raider's Longbow",
         "fr":"Arc long de Bandit",
-        "es":"",
+        "es":"Arco largo de bandido",
         "ch":"",
         "kr":"",
         "ru":"Длинный Лук Налетчика",
         "tr":"",
-        "de":"",
+        "de":"Langer Banditbogen",
         "jp":"",
         "pt":"",
         "vi":"Cung Raider",
@@ -614,12 +614,12 @@
     "item.204.name":{
         "en":"Protecting Bow",
         "fr":"Arc protecteur",
-        "es":"",
+        "es":"Arco de protección",
         "ch":"",
         "kr":"",
         "ru":"Защитный лук",
         "tr":"",
-        "de":"",
+        "de":"Schutzbogen",
         "jp":"",
         "pt":"",
         "vi":"Cung Protecting",
@@ -632,12 +632,12 @@
     "item.205.name":{
         "en":"Harnes Longbow",
         "fr":"Arc d'Harnes",
-        "es":"",
+        "es":"Arco largo Harnes",
         "ch":"",
         "kr":"",
         "ru":"Длинный Лук Харнеса",
         "tr":"",
-        "de":"",
+        "de":"Harnes Langbogen",
         "jp":"",
         "pt":"",
         "vi":"Cung Harnes",
@@ -650,12 +650,12 @@
     "item.206.name":{
         "en":"Halo Longbow",
         "fr":"Arc long Halo",
-        "es":"",
+        "es":"Halo Arco longo",
         "ch":"",
         "kr":"",
         "ru":"Длинный Лук Хало",
         "tr":"",
-        "de":"",
+        "de":"Halo langbogen",
         "jp":"",
         "pt":"",
         "vi":"Cung Halo",
@@ -668,12 +668,12 @@
     "item.207.name":{
         "en":"Abadon Longbow",
         "fr":"Arc long d'Abadon",
-        "es":"",
+        "es":"Arco largo Abadon",
         "ch":"",
         "kr":"",
         "ru":"Длинный Лук Абадона",
         "tr":"",
-        "de":"",
+        "de":"Abadon langbogen",
         "jp":"",
         "pt":"",
         "vi":"Cung Abadon",
@@ -686,12 +686,12 @@
     "item.208.name":{
         "en":"Destined Longbow",
         "fr":"Arc long de la Destinée",
-        "es":"",
+        "es":"Arco largo destinado",
         "ch":"",
         "kr":"",
         "ru":"Длинный Лук Судьбы",
         "tr":"",
-        "de":"",
+        "de":"Bestimmungsgemässer Langbogen",
         "jp":"",
         "pt":"",
         "vi":"Cung Destined",
@@ -704,12 +704,12 @@
     "item.209.name":{
         "en":"Rebirth Longbow",
         "fr":"Arc long de la Renaissance",
-        "es":"",
+        "es":"Renacimiento arco largo",
         "ch":"",
         "kr":"",
         "ru":"Длинный Лук Перерождения",
         "tr":"",
-        "de":"",
+        "de":"Wiedergeburt Langbogen",
         "jp":"",
         "pt":"",
         "vi":"Cung Tái Sinh",
@@ -722,12 +722,12 @@
     "item.210.name":{
         "en":"Dabura Bow",
         "fr":"Arc de Dabura",
-        "es":"",
+        "es":"Dabura arco",
         "ch":"",
         "kr":"",
         "ru":"Лук Дабура",
         "tr":"",
-        "de":"",
+        "de":"Dabura bogen",
         "jp":"",
         "pt":"",
         "vi":"Cung Dabura",
@@ -740,12 +740,12 @@
     "item.300.name":{
         "en":"Disciple's Staff",
         "fr":"Bâton du Disciple",
-        "es":"",
+        "es":"Palo del discípulo",
         "ch":"",
         "kr":"",
         "ru":"Ученический Посох",
         "tr":"",
-        "de":"",
+        "de":"Schülerstab",
         "jp":"",
         "pt":"",
         "vi":"Gậy cũ",
@@ -758,12 +758,12 @@
     "item.301.name":{
         "en":"Wizard Wand",
         "fr":"Baguette du Sorcier",
-        "es":"",
+        "es":"Varita del Hechicero",
         "ch":"",
         "kr":"",
         "ru":"Волшебная Палочка",
         "tr":"",
-        "de":"",
+        "de":"Zauberstab",
         "jp":"",
         "pt":"",
         "vi":"Gậy của thuật sĩ",
