Translation - 3 JSON files

--- a/Translation/config.json
+++ b/Translation/config.json
@@ -2,12 +2,12 @@
     "config.sound.title":{
         "en":"Sound",
         "fr":"Audio",
-        "es":"",
+        "es":"Sonido",
         "ch":"",
         "kr":"",
         "ru":"Звук",
         "tr":"",
-        "de":"",
+        "de":"Ton",
         "jp":"",
         "pt":"",
         "vi":"Âm thanh",
@@ -20,12 +20,12 @@
 	"config.graphics.title":{
         "en":"Graphics",
         "fr":"Graphiques",
-        "es":"",
+        "es":"Gráficos",
         "ch":"",
         "kr":"",
         "ru":"Графика",
         "tr":"",
-        "de":"",
+        "de":"Grafiken",
         "jp":"",
         "pt":"",
         "vi":"Đồ họa",
@@ -37,13 +37,13 @@
     },
     "config.sound.volume.ambient":{
         "en":"Volume of ambience",
-        "fr":"Volume des ambiances",
-        "es":"",
+        "fr":"Volume des musiques d'ambiances",
+        "es":"Volumen del ambiente",
         "ch":"",
         "kr":"",
         "ru":"Звук окружения",
         "tr":"",
-        "de":"",
+        "de":"Lautstärke des Ambientes",
         "jp":"",
         "pt":"",
         "vi":"Âm thanh của môi trường",
@@ -55,13 +55,13 @@
     },
     "config.sound.volume.effects":{
         "en":"Volume of sound effects",
-        "fr":"Volume des effects sonores",
-        "es":"",
+        "fr":"Volume des effets sonores",
+        "es":"Volumen de los efectos de sonido",
         "ch":"",
         "kr":"",
         "ru":"Громкость звуковых эффектов",
         "tr":"",
-        "de":"",
+        "de":"Lautstärke der Soundeffekte",
         "jp":"",
         "pt":"",
         "vi":"Âm lượng hiệu ứng âm thanh",
