--- a/Translation/event.json
+++ b/Translation/event.json
@@ -2,12 +2,12 @@
     "event.btn.enter":{
         "en":"Enter",
         "fr":"Entrer",
-        "es":"",
+        "es":"Entra en",
         "ch":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Eingeben",
         "jp":"",
         "pt":"",
         "vi":"Vào",
@@ -20,12 +20,12 @@
     "event.btn.leave":{
         "en":"Leave",
         "fr":"Sortir",
-        "es":"",
+        "es":"Deje",
         "ch":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Verlassen",
         "jp":"",
         "pt":"",
         "vi":"Ra",
@@ -38,12 +38,12 @@
     "event.btn.not-time":{
         "en":"Not Time",
         "fr":"Horaires",
-        "es":"",
+        "es":"Horarios",
         "ch":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Zeitpläne",
         "jp":"",
         "pt":"",
         "vi":"Không Hoạt Động",
@@ -56,12 +56,12 @@
     "event.btn.introduction":{
         "en":"Intro.",
         "fr":"Intro.",
-        "es":"",
+        "es":"Intro.",
         "ch":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Einführung",
         "jp":"",
         "pt":"",
         "vi":"",
@@ -74,12 +74,12 @@
     "event.lava-core.title":{
         "en":"Lava Core X 10",
         "fr":"Coeur de lave X 10",
-        "es":"",
+        "es":"Lava Core X 10",
         "ch":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Lava-Kern X 10",
         "jp":"",
         "pt":"",
         "vi":"Lõi Dung Nham",
@@ -92,12 +92,12 @@
     "event.lava-core.description-1":{
         "en":"Faster Lava Core refresh rate",
         "fr":"Taux de rafraichissement du Coeur de Lave plus élevé",
-        "es":"",
+        "es":"Mayor velocidad de refresco del Core de Lava",
         "ch":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Schnellere Lava Kern-Bildwiederholrate",
         "jp":"",
         "pt":"",
         "vi":"Tốc độ tái tạo Lõi Dung nham nhanh hơn",
@@ -108,21 +108,21 @@
         "id":""
     },
     "event.lava-core.description-2":{
-        "en":"Time: 11:00-12:00 19:00-20:00",
-        "fr":"Horaires: 11:00-12:00 19:00-20:00",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"Thời Gian: 11:00 19:00-20:00",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
+        "en":"Time: 10:00-11:00 18:00-19:00 (GMT+0)",
+        "fr":"Horaires: 11:00-12:00 19:00-20:00 (GMT+1)",
+        "es":"Horarios: 11:00-12:00 19:00-20:00 (GMT+1)",
+        "ch":"18:00-19:00 02:00-03:00 (GMT+8)",
+        "kr":"19:00-20:00 03:00-04:00 (GMT+9)",
+        "ru":"13:00-14:00 21:00-22:00 (GMT+3)",
+        "tr":"13:00-14:00 21:00-22:00 (GMT+3)",
+        "de":"Zeitpläne: 11:00-12:00 19:00-20:00 (GMT+1)",
+        "jp":"19:00-20:00 03:00-04:00 (GMT+9)",
+        "pt":"10:00-11:00 18:00-19:00 (GMT+0)",
+        "vi":"Thời Gian: 17:00-18:00 01:00-02:00 (GMT+7)",
+        "ar":"04:00-05:00 12:00-13:00 (GMT-6)",
+        "it":"09:00-10:00 17:00-18:00 (GMT-1)",
+        "pl":"11:00-12:00 19:00-20:00 (GMT+1)",
+        "th":"17:00-18:00 01:00-02:00 (GMT+7)",
+        "id":"03:00-04:00 11:00-12:00 (GMT-7)"
     }
 }
