--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -2,12 +2,12 @@
     "tooltip.item.position":{
         "en":"Gear Position",
         "fr":"Emplacement",
-        "es":"Posicion",
+        "es":"Posición del equipo",
         "ch":"",
         "kr":"",
         "ru":"Слот Экипировки",
         "tr":"",
-        "de":"Standort",
+        "de":"Getriebeposition",
         "jp":"",
         "pt":"",
         "vi":"Trang bị",
@@ -20,12 +20,12 @@
     "tooltip.item.class":{
         "en":"Required Class",
         "fr":"Classe Requise",
-        "es":"Clase",
+        "es":"Clase requerida",
         "ch":"",
         "kr":"",
         "ru":"Требуемый Класс",
         "tr":"",
-        "de":"Klasse erforderlich",
+        "de":"Erforderliche Klasse",
         "jp":"",
         "pt":"",
         "vi":"Vai trò",
@@ -38,12 +38,12 @@
     "tooltip.item.gender":{
         "en":"Required Gender",
         "fr":"Genre Requis",
-        "es":"Sexo",
+        "es":"Sexo requiredo",
         "ch":"",
         "kr":"",
         "ru":"Требуемый Пол",
         "tr":"",
-        "de":"Erforderlicher Typ",
+        "de":"Erforderlich Geschlecht",
         "jp":"",
         "pt":"",
         "vi":"Giới tính",
@@ -56,7 +56,7 @@
     "tooltip.item.level":{
         "en":"Required Lv",
         "fr":"Niveau Requis",
-        "es":"Nivel",
+        "es":"Nivel requerido",
         "ch":"",
         "kr":"",
         "ru":"Требуемый уровень",
@@ -74,12 +74,12 @@
     "tooltip.item.mod-stats":{
         "en":"Mod Stats",
         "fr":"Mod Stats",
-        "es":"",
+        "es":"Mod Stats",
         "ch":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Mod Stats",
         "jp":"",
         "pt":"",
         "vi":"Thuộc tính nâng cấp",
@@ -92,12 +92,12 @@
     "tooltip.item.ench-stats":{
         "en":"ENCH Stats",
         "fr":"AMELIO Stats",
-        "es":"",
+        "es":"Encantos Estadísticas",
         "ch":"",
         "kr":"",
         "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Verzauberungen Stats",
         "jp":"",
         "pt":"",
         "vi":"Thuộc tính tăng cường",
@@ -115,7 +115,7 @@
         "kr":"",
         "ru":"Пассивный",
         "tr":"",
-        "de":"",
+        "de":"Passiva",
         "jp":"",
         "pt":"",
         "vi":"Bị động",
@@ -133,7 +133,7 @@
         "kr":"",
         "ru":"{0} сек перезарядка",
         "tr":"",
-        "de":"",
+        "de":"{0} sek Abklingzeit",
         "jp":"",
         "pt":"",
         "vi":"Thời gian hồi chiêu {0} giây",
@@ -146,12 +146,12 @@
     "tooltip.skill.instant":{
         "en":"Instant",
         "fr":"Instantané",
-        "es":"Instantáneo",
+        "es":"Instantánea",
         "ch":"",
         "kr":"",
         "ru":"Мгновенный",
         "tr":"",
-        "de":"",
+        "de":"Schnappschuss",
         "jp":"",
         "pt":"",
         "vi":"Lập tức",
@@ -164,12 +164,12 @@
     "tooltip.player-menu.set-as-target":{
         "en":"Set as Target",
         "fr":"Cibler",
-        "es":"",
+        "es":"Fijar como objetivo",
         "ch":"",
         "kr":"",
         "ru":"Нацелится",
         "tr":"",
-        "de":"",
+        "de":"Als Ziel setzen",
         "jp":"",
         "pt":"",
         "vi":"Chọn làm mục tiêu",
@@ -182,12 +182,12 @@
     "tooltip.player-menu.whisper":{
         "en":"Whisper",
         "fr":"Chuchoter",
-        "es":"",
+        "es":"Susurro",
         "ch":"",
         "kr":"",
         "ru":"Шепотом",
         "tr":"",
-        "de":"",
+        "de":"Flüstern",
         "jp":"",
         "pt":"",
         "vi":"Nói riêng",
@@ -200,12 +200,12 @@
     "tooltip.player-menu.copy-name":{
         "en":"Copy name",
         "fr":"Copier le nom",
-        "es":"",
+        "es":"Copia Nombre",
         "ch":"",
         "kr":"",
         "ru":"Копировать Имя",
         "tr":"",
-        "de":"",
+        "de":"Name kopierien",
         "jp":"",
         "pt":"",
         "vi":"Sao chép tên",
@@ -218,12 +218,12 @@
     "tooltip.player-menu.group-invite-to-join":{
         "en":"Invite Group",
         "fr":"Inviter Groupe",
-        "es":"",
+        "es":"Grupo de Invitación",
         "ch":"",
         "kr":"",
         "ru":"Пригласить в группу",
         "tr":"",
-        "de":"",
+        "de":"Gruppe einladen",
         "jp":"",
         "pt":"",
         "vi":"Mời vào nhóm",
@@ -236,12 +236,12 @@
     "tooltip.player-menu.group-set-new-leader":{
         "en":"Set new leader",
         "fr":"Changer leader",
-        "es":"",
+        "es":"Establecer un nuevo líder",
         "ch":"",
         "kr":"",
         "ru":"Сменить лидера",
         "tr":"",
-        "de":"",
+        "de":"Neuen Leiter setzen",
         "jp":"",
         "pt":"",
         "vi":"Chuyển đội trưởng",
@@ -254,12 +254,12 @@
     "tooltip.player-menu.group-expel":{
         "en":"Expel from group",
         "fr":"Expulser du groupe",
-        "es":"",
+        "es":"Expulsar del grupo",
         "ch":"",
         "kr":"",
         "ru":"Исключить из группы",
         "tr":"",
-        "de":"",
+        "de":"Aus der Gruppe ausschliessen",
         "jp":"",
         "pt":"",
         "vi":"Đuổi khỏi nhóm",
@@ -272,12 +272,12 @@
     "tooltip.player-menu.group-leave":{
         "en":"Leave group",
         "fr":"Partir du groupe",
-        "es":"",
+        "es":"Deje el grupo",
         "ch":"",
         "kr":"",
         "ru":"Покинуть Группу",
         "tr":"",
-        "de":"",
+        "de":"Gruppe verlassen",
         "jp":"",
         "pt":"",
         "vi":"Rời khỏi nhóm",
@@ -290,12 +290,12 @@
     "tooltip.player-menu.group-disband":{
         "en":"Disband group",
         "fr":"Disoudre le groupe",
-        "es":"",
+        "es":"Disolver el grupo",
         "ch":"",
         "kr":"",
         "ru":"Распустить группу",
         "tr":"",
-        "de":"",
+        "de":"Gruppe auflösen",
         "jp":"",
         "pt":"",
         "vi":"Giải tán nhóm",
