--- a/Translation/general.json
+++ b/Translation/general.json
@@ -195,7 +195,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Baru"
     },
     "general.quest.getReward":{
         "en":"Get Reward",
