--- a/Translation/event.json
+++ b/Translation/event.json
@@ -15,7 +15,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Masuk"
     },
     "event.btn.leave":{
         "en":"Leave",
@@ -33,7 +33,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Keluar"
     },
     "event.btn.not-time":{
         "en":"Not Time",
@@ -51,7 +51,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Tidak aktif"
     },
     "event.btn.introduction":{
         "en":"Intro.",
@@ -69,7 +69,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Intro"
     },
     "event.lava-core.title":{
         "en":"Lava Core X 10",
@@ -87,7 +87,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Lava Core X 10"
     },
     "event.lava-core.description-1":{
         "en":"Faster Lava Core refresh rate",
@@ -105,7 +105,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Respawn rate Lava Core lebih cepat"
     },
     "event.lava-core.description-2":{
         "en":"Time: 10:00-11:00 18:00-19:00 (GMT+0)",
