--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -7,7 +7,7 @@
         "kr":"",
         "ru":"Огненная стрела",
         "tr":"",
-        "de":"",
+        "de":"Feuerpfeil",
         "jp":"",
         "pt":"",
         "vi":"Cầu lửa",
@@ -25,7 +25,7 @@
         "kr":"",
         "ru":"Огненная стрела поражает одиночную цель, нанося огромный урон.",
         "tr":"",
-        "de":"",
+        "de":"Trifft ein einzelnes Ziel mit einem Feuerblitz und verursacht massiven Schaden.",
         "jp":"",
         "pt":"",
         "vi":"Tấn công một mục tiêu bằng quả cầu lửa và gây sát thương lớn.",
@@ -43,7 +43,7 @@
         "kr":"",
         "ru":"Наносит {0}% урона и дополнительные {1} урона от навыка",
         "tr":"",
-        "de":"",
+        "de":"Verursacht {0}% Schaden und zusätzlichen {1} Fertigkeitsschaden.",
         "jp":"",
         "pt":"",
         "vi":"Gây ra {0}% sát thương và thêm {1} sát thương kỹ năng.",
@@ -61,7 +61,7 @@
         "kr":"",
         "ru":"Магическая стрела",
         "tr":"",
-        "de":"",
+        "de":"Magischer Pfeil",
         "jp":"",
         "pt":"",
         "vi":"Cầu ma thuật",
@@ -79,7 +79,7 @@
         "kr":"",
         "ru":"Выпускает несколько стрел в цель, наносит магический урон.",
         "tr":"",
-        "de":"",
+        "de":"Wirft mehrere Pfeile auf das Ziel und verursacht magischen Schaden.",
         "jp":"",
         "pt":"",
         "vi":"Phóng nhiều tia ma thuật vào mục tiêu, gây sát thương phép.",
@@ -97,7 +97,7 @@
         "kr":"",
         "ru":"Выпускает 3 стрелы нанося на {0}% больше урона и дополнительно {1} урона от навыка",
         "tr":"",
-        "de":"",
+        "de":"Schießen Sie 3 Pfeile, um {0}% mehr Schaden und zusätzlichen {1} Fertigkeitsschaden zu verursachen.",
         "jp":"",
         "pt":"",
         "vi":"Phóng 3 tia để gây thêm {0}% sát thương và thêm {1} sát thương kỹ năng.",
@@ -115,7 +115,7 @@
         "kr":"",
         "ru":"Энергия",
         "tr":"",
-        "de":"",
+        "de":"Energie",
         "jp":"",
         "pt":"",
         "vi":"Năng lượng",
@@ -133,7 +133,7 @@
         "kr":"",
         "ru":"Увеличивает максимальное значение MP мага",
         "tr":"",
-        "de":"",
+        "de":"Erhöht die maximale MP des Magiers.",
         "jp":"",
         "pt":"",
         "vi":"Tăng MP tối đa của pháp sư.",
@@ -151,7 +151,7 @@
         "kr":"",
         "ru":"Увеличивает базовое значение MP на {0}%",
         "tr":"",
-        "de":"",
+        "de":"Erhöht die Basis-MP um {0}%",
         "jp":"",
         "pt":"",
         "vi":"Tăng MP cơ bản lên {0}%",
@@ -169,7 +169,7 @@
         "kr":"",
         "ru":"Падение метеорита",
         "tr":"",
-        "de":"",
+        "de":"Meteoritenball",
         "jp":"",
         "pt":"",
         "vi":"Thiên thạch",
@@ -187,7 +187,7 @@
         "kr":"",
         "ru":"Наносит урон по области от управляемых разрушительных метеоритов.",
         "tr":"",
-        "de":"",
+        "de":"Behandelt AOE durch Manipulation zerstörerischer Meteor",
         "jp":"",
         "pt":"",
         "vi":"Gây ra sát thương AOE bằng cách điều khiển thiên thạch hủy diệt.",
@@ -205,7 +205,7 @@
         "kr":"",
         "ru":"Каждая волна атак наносит {0}% урона",
         "tr":"",
-        "de":"",
+        "de":"Jeder gestapelte Angriff verursacht {0}% Schaden.",
         "jp":"",
         "pt":"",
         "vi":"Mỗi đòn tấn công cộng dồn gây ra {0}% sát thương.",
@@ -223,7 +223,7 @@
         "kr":"",
         "ru":"Пробуждение",
         "tr":"",
-        "de":"",
+        "de":"Erwachen",
         "jp":"",
         "pt":"",
         "vi":"Thức tỉnh",
@@ -241,7 +241,7 @@
         "kr":"",
         "ru":"Быстрое восстановление MP",
         "tr":"",
-        "de":"",
+        "de":"Stellt MP schnell wieder her.",
         "jp":"",
         "pt":"",
         "vi":"Phục hồi năng lượng.",
@@ -259,7 +259,7 @@
         "kr":"",
         "ru":"Восстанавливает {0} MP",
         "tr":"",
-        "de":"",
+        "de":"Stellen Sie MP mit {0} wieder her.",
         "jp":"",
         "pt":"",
         "vi":"Khôi phục năng lượng bằng {0}",
@@ -277,7 +277,7 @@
         "kr":"",
         "ru":"Гроза",
         "tr":"",
-        "de":"",
+        "de":"Donner",
         "jp":"",
         "pt":"",
         "vi":"Sấm sét",
@@ -295,7 +295,7 @@
         "kr":"",
         "ru":"Сильная гроза поражает одиночную цель",
         "tr":"",
-        "de":"",
+        "de":"Trifft ein einzelnes Ziel mit Donner schwer.",
         "jp":"",
         "pt":"",
         "vi":"Tấn công một mục tiêu bằng tia sấm sét cực mạnh.",
@@ -313,7 +313,7 @@
         "kr":"",
         "ru":"Наносит на {0}% больше урона и добавляет {1} урона от навыка.",
         "tr":"",
-        "de":"",
+        "de":"Verursacht {0}% mehr Schaden und zusätzlich {1} Fertigkeitsschaden.",
         "jp":"",
         "pt":"",
         "vi":"Gây thêm {0}% sát thương và thêm {1} sát thương kỹ năng.",
@@ -331,7 +331,7 @@
         "kr":"",
         "ru":"Огненная стена",
         "tr":"",
-        "de":"",
+        "de":"Feuerwand",
         "jp":"",
         "pt":"",
         "vi":"Thảm lửa",
@@ -349,7 +349,7 @@
         "kr":"",
         "ru":"Наносит урон и замедляет противников в области дейстия магического пламени",
         "tr":"",
-        "de":"",
+        "de":"Schädigt und verlangsamt Feinde im Wirkungsbereich, durch das Heraufbeschwören von Flammen.",
         "jp":"",
         "pt":"",
         "vi":"Gây sát thương và làm chậm kẻ địch trong vùng ảnh hưởng bằng cách tạo ra một thảm lửa.",
@@ -367,7 +367,7 @@
         "kr":"",
         "ru":"Наносит {0}% урона и добавляет {1} урона от навыка каждую секунду. Действует 15 секунд.",
         "tr":"",
-        "de":"",
+        "de":"Verursacht pro Sekunde {0}% Schaden und zusätzlich {1} Fertigkeitsschaden. Hält 15 Sekunden an.",
         "jp":"",
         "pt":"",
         "vi":"Gây {0}% sát thương và thêm {1} sát thương kỹ năng mỗi giây. Kéo dài 15 giây",
@@ -385,7 +385,7 @@
         "kr":"",
         "ru":"Заморозка",
         "tr":"",
-        "de":"",
+        "de":"Einfrieren",
         "jp":"",
         "pt":"",
         "vi":"Đóng băng",
@@ -403,7 +403,7 @@
         "kr":"",
         "ru":"Замораживает цель. Цель будет разморожена когда получит урон.",
         "tr":"",
-        "de":"",
+        "de":"Friert das Ziel ein. Das Ziel ist nicht gefroren, wenn es Schaden genommen hat.",
         "jp":"",
         "pt":"",
         "vi":"Đóng băng mục tiêu. Mục tiêu sẽ không còn bị đóng băng khi nhận sát thương.",
@@ -421,7 +421,7 @@
         "kr":"",
         "ru":"Наносит {0}% урона и замораживает цель на {1} секунду.",
         "tr":"",
-        "de":"",
+        "de":"Verursacht {0}% Schaden und friert das Ziel für {1} Sekunden ein. Friert das Ziel ein. Das Ziel ist nicht gefroren, wenn es Schaden genommen hat.",
         "jp":"",
         "pt":"",
         "vi":"Gây {0}% sát thương và đóng băng mục tiêu trong {1} giây.",
@@ -439,7 +439,7 @@
         "kr":"",
         "ru":"Магическое мастерство",
         "tr":"",
-        "de":"",
+        "de":"Magische Meisterschaft",
         "jp":"",
         "pt":"",
         "vi":"Kiểm soát ma thuật",
@@ -457,7 +457,7 @@
         "kr":"",
         "ru":"Увеличивает шанс критической атаки и критический урон от магических атак",
         "tr":"",
-        "de":"",
+        "de":"Erhöht die Chance auf magische, kritische Treffer und den kritischen Schaden.",
         "jp":"",
         "pt":"",
         "vi":"Tăng Cơ hội Chí mạng phép thuật và sát thương Chí mạng.",
@@ -475,7 +475,7 @@
         "kr":"",
         "ru":"Увеличивает шанс критической атаки от навыков на {0}%. Так же увеличивает критический урон от навыков на {1}%",
         "tr":"",
-        "de":"",
+        "de":"Erhöht die Chance auf kritische Fertigkeiten um {0}%. Erhöht außerdem den kritischen Schaden um {1}%.",
         "jp":"",
         "pt":"",
         "vi":"Tăng khả năng chí mạng của kỹ năng lên {0}%. Đồng thời tăng sát thương chí mạng kỹ năng lên {1}%.",
@@ -493,7 +493,7 @@
         "kr":"",
         "ru":"Магический щит",
         "tr":"",
-        "de":"",
+        "de":"Magisches Schild",
         "jp":"",
         "pt":"",
         "vi":"Khiên ma thuật",
@@ -511,7 +511,7 @@
         "kr":"",
         "ru":"Создаёт магический щит, который впитывает получаемый урон.",
         "tr":"",
-        "de":"",
+        "de":"Erstellt einen magischen Schild, um ankommenden Schaden zu absorbieren.",
         "jp":"",
         "pt":"",
         "vi":"Tạo một lá chắn ma thuật để hấp thụ sát thương nhận vào.",
@@ -529,7 +529,7 @@
         "kr":"",
         "ru":"Магический щит впитывает {0} получаемого урона. Действует 20 секунд.",
         "tr":"",
-        "de":"",
+        "de":"Magischer Schild absorbiert {0} ankommenden Schaden. Hält bis zu 20 Sekunden an.",
         "jp":"",
         "pt":"",
         "vi":"Khiên ma thuật hấp thụ {0} sát thương nhận vào. Kéo dài đến 20 giây",
@@ -547,7 +547,7 @@
         "kr":"",
         "ru":"Проклятие Тишины",
         "tr":"",
-        "de":"",
+        "de":"Schweigen",
         "jp":"",
         "pt":"",
         "vi":"Câm lặng",
@@ -565,7 +565,7 @@
         "kr":"",
         "ru":"Проклинает цель, запрещает ей использовать навыки.",
         "tr":"",
-        "de":"",
+        "de":"Greift das Ziel an und verhindert, dass es Fähigkeiten einsetzt.",
         "jp":"",
         "pt":"",
         "vi":"Tấn công mục tiêu, khiến nó không thể sử dụng các kỹ năng.",
@@ -583,7 +583,7 @@
         "kr":"",
         "ru":"Наносит на {0}% больше урона и дополонительно {1} урона от навыка. действует 2 секунды.",
         "tr":"",
-        "de":"",
+        "de":"Fügt {0}% mehr Schaden und zusätzlich {1} Fertigkeitsschaden zu. Hält {2} Sekunden an.",
         "jp":"",
         "pt":"",
         "vi":"Gây thêm {0}% sát thương và thêm {1} sát thương kỹ năng. Kéo dài {2} giây.",
@@ -601,7 +601,7 @@
         "kr":"",
         "ru":"Дыхание холода",
         "tr":"",
-        "de":"",
+        "de":"Frosthauch",
         "jp":"",
         "pt":"",
         "vi":"Gầm băng giá",
@@ -619,7 +619,7 @@
         "kr":"",
         "ru":"Наносит большой урон всем врагам в области действия. Наносит дополнительный урон замароженным врагам.",
         "tr":"",
-        "de":"",
+        "de":"Fügt allen Gegnern im Wirkungsbereich massiven Schaden zu. Fügt gefrorenen Zielen zusätzlichen Schaden zu.",
         "jp":"",
         "pt":"",
         "vi":"Gây sát thương lớn cho tất cả kẻ địch trong vùng ảnh hưởng. Gây thêm sát thương cho các mục tiêu bị đóng băng.",
@@ -637,7 +637,7 @@
         "kr":"",
         "ru":"Наносит на {0}% больше урона и дополнительно {1} урона от навыка.",
         "tr":"",
-        "de":"",
+        "de":"Verursacht {0}% mehr Schaden und zusätzlich {1} Fertigkeitsschaden.",
         "jp":"",
         "pt":"",
         "vi":"Gây thêm {0}% sát thương và thêm {1} sát thương kỹ năng.",
@@ -655,7 +655,7 @@
         "kr":"",
         "ru":"Тройной выстрел",
         "tr":"",
-        "de":"",
+        "de":"Dreifachschuss",
         "jp":"",
         "pt":"",
         "vi":"Triple Shot",
@@ -673,7 +673,7 @@
         "kr":"",
         "ru":"Стреляет в  одиночную цель нанося серьёзный урон.",
         "tr":"",
-        "de":"",
+        "de":"Schießt auf ein einzelnes Ziel, um großen Schaden zu verursachen.",
         "jp":"",
         "pt":"",
         "vi":"Gây nhiều sát thương cho một mục tiêu.",
@@ -691,7 +691,7 @@
         "kr":"",
         "ru":"Наносит на {0}% больше урона и дополнительно {1} урона от навыка.",
         "tr":"",
-        "de":"",
+        "de":"Verursacht {0}% mehr Schaden und zusätzlich {1} Fertigkeitsschaden.",
         "jp":"",
         "pt":"",
         "vi":"Gây thêm {0}% sát thương và thêm {1} sát thương kỹ năng.",
@@ -709,7 +709,7 @@
         "kr":"",
         "ru":"",
         "tr":"Отравленная стрела",
-        "de":"",
+        "de":"Giftpfeil",
         "jp":"",
         "pt":"",
         "vi":"Tên độc",
@@ -727,7 +727,7 @@
         "kr":"",
         "ru":"Отравляет и замедляет цель.",
         "tr":"",
-        "de":"",
+        "de":"Vergiftet das Ziel und verlangsamt es.",
         "jp":"",
         "pt":"",
         "vi":"Mục tiêu bị trúng độc và làm chậm.",
@@ -745,7 +745,7 @@
         "kr":"",
         "ru":"Снижает скорость цели на {0}%. Цель получает на {1}% больше урона и дополнительно {2} урона от навыка за 4 секунды.",
         "tr":"",
-        "de":"",
+        "de":"Verringert die Geschwindigkeit des Ziels um {0}%. Das Ziel erleidet innerhalb von 4 Sekunden {1}% mehr Schaden und zusätzlich {2} Fertigkeitsschaden.",
         "jp":"",
         "pt":"",
         "vi":"Giảm tốc độ di chuyển của mục tiêu xuống {0}%. Mục tiêu nhận thêm {1}% sát thương và thêm {2} sát thương kỹ năng trong 4 giây.",
@@ -763,7 +763,7 @@
         "kr":"",
         "ru":"Орлиный глаз",
         "tr":"",
-        "de":"",
+        "de":"Adlerauge",
         "jp":"",
         "pt":"",
         "vi":"Eagle Eye",
@@ -781,7 +781,7 @@
         "kr":"",
         "ru":"Позволяет Рейнджеру наносить усиленную атаку дальним целям.",
         "tr":"",
-        "de":"",
+        "de":"Bietet dem Ränger eine Angriffszunahme für entfernte Ziele.",
         "jp":"",
         "pt":"",
         "vi":"Tăng sát thương với mục tiêu ở xa.",
@@ -799,7 +799,7 @@
         "kr":"",
         "ru":"Обычная атака наносит на {0}% увеличенный урон целям находящимся на расстоянии более 8 ярдов от вас.",
         "tr":"",
-        "de":"",
+        "de":"Normale Angriffe fügen Zielen, die mehr als 8 Meter von Ihnen entfernt sind, {0}% erhöhten Schaden zu.",
         "jp":"",
         "pt":"",
         "vi":"Đòn tấn công thường gây ra {0}% sát thương tăng sát thương với các mục tiêu cách bạn 8 thước.",
