--- a/Translation/item.json
+++ b/Translation/item.json
@@ -334,7 +334,7 @@
         "de":"Sonstiges",
         "jp":"",
         "pt":"",
-        "vi":"Linh tinh",
+        "vi":"Hỗn Hợp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -370,7 +370,7 @@
         "de":"Schwert für Anfänger",
         "jp":"",
         "pt":"",
-        "vi":"Kiếm cho người mới bắt đầu",
+        "vi":"Kiếm Khởi Đầu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -406,7 +406,7 @@
         "de":"Tapferes-Schwert",
         "jp":"",
         "pt":"",
-        "vi":"Kiếm Valiant",
+        "vi":"Kiếm Gan Dạ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -424,7 +424,7 @@
         "de":"Wüstenklinge",
         "jp":"",
         "pt":"",
-        "vi":"Lưỡi Kiếm Sa Mạc",
+        "vi":"Kiếm Công Trạng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -460,7 +460,7 @@
         "de":"Leuchtendes Schwert",
         "jp":"",
         "pt":"",
-        "vi":"Kiếm Halo",
+        "vi":"Kiếm Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -496,7 +496,7 @@
         "de":"Bestimmtes Schwert",
         "jp":"",
         "pt":"",
-        "vi":"Kiếm Destined",
+        "vi":"Kiếm Định Mệnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -568,7 +568,7 @@
         "de":"Präziser Bogen",
         "jp":"",
         "pt":"",
-        "vi":"Cung Precise",
+        "vi":"Cung Chuẩn Xác",
         "ar":"",
         "it":"",
         "pl":"",
@@ -604,7 +604,7 @@
         "de":"Langer Banditbogen",
         "jp":"",
         "pt":"",
-        "vi":"Cung Raider",
+        "vi":"Cung Đột Kích ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -622,7 +622,7 @@
         "de":"Schutzbogen",
         "jp":"",
         "pt":"",
-        "vi":"Cung Protecting",
+        "vi":"Cung Hộ Vệ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -658,7 +658,7 @@
         "de":"Halo langbogen",
         "jp":"",
         "pt":"",
-        "vi":"Cung Halo",
+        "vi":"Cung Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -694,7 +694,7 @@
         "de":"Bestimmungsgemässer Langbogen",
         "jp":"",
         "pt":"",
-        "vi":"Cung Destined",
+        "vi":"Cung Định Mệnh",
         "ar":"",
         "it":"",
         "pl":"",
