--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -7,7 +7,7 @@
         "kr":"",
         "ru":"Слот Экипировки",
         "tr":"",
-        "de":"Getriebeposition",
+        "de":"Ausrüstungsort",
         "jp":"",
         "pt":"",
         "vi":"Trang bị",
@@ -43,7 +43,7 @@
         "kr":"",
         "ru":"Требуемый Пол",
         "tr":"",
-        "de":"Erforderlich Geschlecht",
+        "de":"Erforderliches Geschlecht",
         "jp":"",
         "pt":"",
         "vi":"Giới tính",
@@ -61,7 +61,7 @@
         "kr":"",
         "ru":"Требуемый уровень",
         "tr":"",
-        "de":"Erforderlicher Niveau",
+        "de":"Erforderliches Level",
         "jp":"",
         "pt":"",
         "vi":"Yêu cầu Lv",
@@ -115,7 +115,7 @@
         "kr":"",
         "ru":"Пассивный",
         "tr":"",
-        "de":"Passiva",
+        "de":"Passive",
         "jp":"",
         "pt":"",
         "vi":"Bị động",
@@ -151,7 +151,7 @@
         "kr":"",
         "ru":"Мгновенный",
         "tr":"",
-        "de":"Schnappschuss",
+        "de":"Instant",
         "jp":"",
         "pt":"",
         "vi":"Lập tức",
@@ -169,7 +169,7 @@
         "kr":"",
         "ru":"Нацелится",
         "tr":"",
-        "de":"Als Ziel setzen",
+        "de":"Setzte als Ziel",
         "jp":"",
         "pt":"",
         "vi":"Chọn làm mục tiêu",
@@ -205,7 +205,7 @@
         "kr":"",
         "ru":"Копировать Имя",
         "tr":"",
-        "de":"Name kopierien",
+        "de":"Name kopieren",
         "jp":"",
         "pt":"",
         "vi":"Sao chép tên",
@@ -223,7 +223,7 @@
         "kr":"",
         "ru":"Пригласить в группу",
         "tr":"",
-        "de":"Gruppe einladen",
+        "de":"Einladen in Gruppe",
         "jp":"",
         "pt":"",
         "vi":"Mời vào nhóm",
@@ -241,7 +241,7 @@
         "kr":"",
         "ru":"Сменить лидера",
         "tr":"",
-        "de":"Neuen Leiter setzen",
+        "de":"Bestimme neuen Leiter",
         "jp":"",
         "pt":"",
         "vi":"Chuyển đội trưởng",
@@ -259,7 +259,7 @@
         "kr":"",
         "ru":"Исключить из группы",
         "tr":"",
-        "de":"Aus der Gruppe ausschliessen",
+        "de":"Aus Gruppe werfen",
         "jp":"",
         "pt":"",
         "vi":"Đuổi khỏi nhóm",
